<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">BasmApp</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="send_to">Send via</string>
    <string name="activity_course">Course Details</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_courses">Courses</string>
    <string name="navigation_drawer_wishlist">Wishlist</string>
    <string name="navigation_drawer_materials">Study Materials</string>
    <string name="navigation_drawer_meetups">Meetups</string>
    <string name="navigation_drawer_discussions">Discussions</string>
    <string name="navigation_drawer_malshab">Security Service Candidates</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_faq">FAQ</string>
    <string name="navigation_drawer_contact_us">Contact Us</string>
    <string name="navigation_drawer_describe_problem">@string/mail_subject</string>
    <string name="navigation_drawer_about">About Application</string>
    <string name="navigation_drawer_profile_sign_in">Sign in</string>
    <string name="navigation_drawer_profile_stranger">Hey stranger!</string>
    <string name="navigation_drawer_sign_out">Sign Out</string>
    <string name="navigation_drawer_add_account">Add account</string>
    <string name="offline_snackbar_network_unavailable">No internet connection</string>
    <string name="offline_snackbar_retry">Retry</string>
    <string name="permission_contacts_access_for_gplus">To show profile details from your Google+ account, allow Marshal access your contacts.</string>
    <string name="permission_contacts_access">To show profile details from your Google+ account, allow Marshal access your contacts. Tap Settings > Permissions, and turn Contacts on.</string>
    <string name="permission_continue">CONTINUE</string>
    <string name="permission_cancel">NOT NOW</string>
    <string name="permission_settings_open">SETTINGS</string>
    <string name="loading">Loading…</string>
    <string name="sign_in_progress">Signing in…</string>
    <string name="sign_out_progress">Signing out…</string>
    <string name="sign_out_confirm">Do you want to sign out of this account?</string>
    <string name="confirm_exit">Press back again to exit.</string>
    <string name="search_title">Search</string>
    <string name="contact_support_via">Contact support via…</string>
    <string name="mail_subject">Feedback/Bug Report</string>
    <string name="search_result">Showing search results for: %1$s</string>
    <string name="see_all">See All</string>
    <string name="course_type_software">Software</string>
    <string name="course_type_it">IT</string>
    <string name="course_type_cyber">Cyber</string>
    <string name="course_type_tools">Computing Tools</string>
    <string name="course_type_system">System Engineering</string>
    <string name="course_name">Name</string>
    <string name="course_category">Category</string>
    <string name="course_general_description">General Description</string>
    <string name="course_syllabus">Syllabus</string>
    <string name="course_code">Course Code</string>
    <string name="course_prerequisites">Prerequisites</string>
    <string name="course_target_population">Target Population</string>
    <string name="course_days_duration">Days Duration</string>
    <string name="course_hours_duration">Hours Duration</string>
    <string name="course_day_time">Day Time</string>
    <string name="course_comments">Comments</string>
    <string name="details_secondary_action_wishlist">Wishlist</string>
    <string name="details_secondary_action_share">Share</string>
    <string name="details_secondary_action_materials">Materials</string>
    <string name="details_secondary_action_google_form">Feedback</string>
    <string name="details_secondary_action_google_translate">Translate</string>
    <string name="share_with">Share with</string>
    <string name="share_course_text">Interesting course from Marshal for Android: \n\n%1$s \n\nDownload the app today from Google Play: \n\n%2$s</string>
    <string name="course_choose_cycle">Choose cycle</string>
    <string name="course_no_cycles_error">This course has no cycles.</string>
    <string name="course_no_details_error">Sorry, currently there are no details to show on this course.</string>
    <string name="course_cycle_item_onclick_error">Something went wrong. Try again later.</string>
    <string name="course_cycle_format" translatable="false">%1$s - %2$s</string>
    <string name="course_cycle_feedback_current_cycle_format">Feedback for %1$s - %2$s ?</string>
    <string name="no_results_for_query">No results found for \"%1$s\".</string>
    <string name="transition_course_toolbar" translatable="false">course_toolbar</string>
    <string name="transition_header_image" translatable="false">course_image</string>
    <string name="update_data">Update Data</string>
    <string name="menu_refresh">Refresh</string>
    <string name="refresh_checking_for_updates">Checking for updates…</string>
    <string name="refresh_no_update">No new updates were found</string>
    <string name="refresh_new_update">There\'s an update! Please wait while we retrieve new data from the server</string>
    <string name="refresh_updated_successfully">Hooray, your data is up to date now!</string>
    <string name="refresh_update_failed">An error occurred while trying to update your data. Please try again later</string>
    <string name="cycle_alert_title">Notice</string>
    <string name="cycle_alert_message">This action <u><b>will not</b></u> register you to the course, but only save the date to your personal calendar. The registration to the course is done through the courses officer in your unit.</string>
    <string name="review_snippets_footer">Read all reviews</string>
    <string name="your_review_text">you</string>
    <string name="please_log_in">Please login to your Google account. Press on the profile image in the navigation drawer.</string>
    <string name="review_dialog_poor">Hated it</string>
    <string name="review_dialog_below_average">Disliked it</string>
    <string name="review_dialog_average">"It's OK"</string>
    <string name="review_dialog_above_average">Liked it</string>
    <string name="review_dialog_excellent">Loved it</string>
    <string name="review_dialog_body_hint">Description</string>
    <string name="review_dialog_title">Rate it!</string>
    <string name="public_reviews_message">Notice: Your email address will not be published, but will be saved in our database.</string>
    <string name="structured_review_question_submit">Submit</string>
    <string name="delete_review">Delete</string>
    <string name="save_review">Save</string>
    <string name="rate_this_course">Rate this course</string>
    <string name="rate_this_meetup">Rate this meetup</string>
    <string name="review_by">Review by <g id="user_name">%1$s</g></string>
    <string name="review_edited_after_developer_reply">(edited)</string>
    <string name="all_reviews">ALL REVIEWS</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="review_save_retry">"The review couldn't be saved, please try again."</string>
    <string name="review_delete_retry">"The review couldn't be deleted, please try again."</string>
    <string name="review_create_error">Unable to create a review.</string>
    <string name="review_feedback_posted">Thanks for your feedback!</string>
    <string name="review_feedback_posted_error">"Couldn't rate comment."</string>
    <string name="no_reviews_error">This course has not been rated yet.</string>
    <string name="edit_review">Edit</string>
    <string name="rating_and_reviews">Rating and reviews</string>
    <string name="new_updates">New Updates</string>
    <string name="update_error">Something went wrong while trying to update data. Try again later.</string>
    <string name="update_retry">Retry</string>
    <string name="got_it">GOT IT</string>
    <string name="cycle_fab_tip_title">See more dates</string>
    <string name="cycle_fab_tip_subtitle">Tap here to see more dates of this course</string>
    <string name="filter_tip_title">Advanced filtering</string>
    <string name="filter_tip_subtitle">Filter search results by date range, course type and category</string>
    <string name="course_filter_reset_filter">Reset filter</string>
    <string name="course_filter_select_date_action">Select date</string>
    <string name="course_filter_start_date_label">Start date</string>
    <string name="course_filter_end_date_label">End date</string>
    <string name="course_filter_apply_filters_button">Apply filters</string>
    <string name="course_filter_start_date_empty">Start date cannot be empty.</string>
    <string name="course_filter_title">Filter</string>
    <string name="about_contributors_heading">Developers &amp; Contributors</string>
    <string name="contributors_list">John Doe</string>
    <string name="about_libraries_heading">Libraries used</string>
    <string name="libraries_list" translatable="false"><a href="https://android.googlesource.com/platform/frameworks/support/">Android Support Libraries</a>, <a href="https://developers.google.com/android/reference/packages">Google Play Services</a>, <a href="https://github.com/bumptech/glide">Glide</a>, <a href="https://square.github.io/okhttp/">OkHttp</a>, <a href="https://square.github.io/retrofit/">Retrofit</a>, <a href="https://github.com/sjwall/MaterialTapTargetPrompt">MaterialTapTargetPrompt</a>, <a href="https://android.googlesource.com/platform/frameworks/opt/colorpicker/">ColorPicker</a>"</string>
    <string name="about_app_license_heading">License</string>
    <string name="about_app_license">Source code available on &lt;a href=\"https://github.com/marshalappdevs/Marshal-Android-App\">GitHub&lt;/a> under the &lt;a href=\"http://www.apache.org/licenses/LICENSE-2.0\">Apache 2.0 License&lt;/a>.</string>
    <string name="about_rate_app">Rate the App</string>
    <string name="about_basmach"><![CDATA[Basmach-<br /><a href="https://goo.gl/s6thV1">The I.D.F\'s IT &amp; Cyber Academy</a>]]></string>
    <string name="pref_personalization_category">Personalization</string>
    <string name="pref_general_category">General</string>
    <string name="pref_language_title">Language</string>
    <string name="night_mode_title">Theme</string>
    <string name="choose_primary_color">Primary Color</string>
    <string name="choose_accent_color">Accent Color</string>
    <string name="revert_to_default_theme">Revert to default theme</string>
    <string name="clear_tap_targets_title">Reset discovery prompts</string>
    <string name="clear_tap_targets_summary">Show all discovery prompts again</string>
    <string name="clear_local_history_title">Clear local search history</string>
    <string name="clear_local_history_summary">Remove searches you have performed from this device</string>
    <string name="pref_notifications_category">Notifications</string>
    <string name="pref_notifications_title">Notify on this device</string>
    <string name="pref_ringtone_title">Ringtone</string>
    <string name="pref_vibrate_title">Vibrate</string>
    <string name="pref_notification_light">Light</string>
    <string name="pref_fcm_channels_title">Channels</string>
    <string name="pref_fcm_channels_summary">Set notification channels based on your interests</string>
    <string name="pref_advanced_category">Advanced</string>
    <string name="custom_tabs_pref_summary">Turn on for faster browsing</string>
    <string name="custom_tabs_pref_title">Open web links in app</string>
</resources>