<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_personalization_category">
        <ListPreference
            android:defaultValue="iw"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:key="LANG"
            android:summary="%s"
            android:title="@string/pref_language_title" />
        <ListPreference
            android:defaultValue="light"
            android:entries="@array/night_mode_entries"
            android:entryValues="@array/night_mode_values"
            android:key="THEME"
            android:summary="%s"
            android:title="@string/night_mode_title" />
        <Preference
            android:key="PRIMARY-COLOR"
            android:title="@string/choose_primary_color" />
        <Preference
            android:key="ACCENT-COLOR"
            android:title="@string/choose_accent_color" />
        <Preference
            android:key="REVERT-THEME"
            android:title="@string/revert_to_default_theme" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_general_category">
        <Preference
            android:key="clear-tap-targets"
            android:summary="@string/clear_tap_targets_summary"
            android:title="@string/clear_tap_targets_title" />
        <Preference
            android:key="clear-history"
            android:summary="@string/clear_local_history_summary"
            android:title="@string/clear_local_history_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_notifications_category">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:title="@string/pref_notifications_title" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_ringtone_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_vibrate_title" />

        <ListPreference
            android:defaultValue="#FFFFFF"
            android:dependency="notifications_new_message"
            android:entries="@array/led_colors"
            android:entryValues="@array/led_color_values"
            android:key="notify_light_color"
            android:summary="%s"
            android:title="@string/pref_notification_light" />

        <MultiSelectListPreference
            android:defaultValue="@array/empty_array"
            android:dependency="notifications_new_message"
            android:key="fcm_channels"
            android:summary="@string/pref_fcm_channels_summary"
            android:title="@string/pref_fcm_channels_title" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_advanced_category">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="CCT"
            android:summary="@string/custom_tabs_pref_summary"
            android:title="@string/custom_tabs_pref_title" />
    </PreferenceCategory>
</PreferenceScreen>
