<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_drawer_school"
            android:title="@string/navigation_drawer_courses"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_drawer_loyalty"
            android:title="@string/navigation_drawer_wishlist" />
        <item
            android:id="@+id/nav_materials"
            android:icon="@drawable/ic_drawer_library"
            android:title="@string/navigation_drawer_materials"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/nav_meetups"
            android:icon="@drawable/ic_drawer_event"
            android:title="@string/navigation_drawer_meetups"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/nav_malshab"
            android:icon="@drawable/ic_drawer_person"
            android:title="@string/navigation_drawer_malshab" />
    </group>

    <group android:id="@+id/grp2">
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_drawer_faq"
            android:title="@string/navigation_drawer_faq" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_drawer_contact_us"
            android:title="@string/navigation_drawer_contact_us" />
    </group>

    <group android:id="@+id/grp3">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/navigation_drawer_settings" />
        <item
            android:id="@+id/nav_describe_problem"
            android:icon="@drawable/ic_drawer_email"
            android:title="@string/navigation_drawer_describe_problem" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_drawer_info"
            android:title="@string/navigation_drawer_about" />
    </group>

    <group
        android:id="@+id/grp4"
        android:checkableBehavior="none"
        android:visible="false">
        <item
            android:id="@+id/account_sign_out"
            android:icon="@drawable/ic_drawer_sign_out"
            android:title="@string/navigation_drawer_sign_out" />
        <item
            android:id="@+id/account_add"
            android:icon="@drawable/ic_drawer_add_account"
            android:title="@string/navigation_drawer_add_account" />
    </group>

</menu>
