<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/course_filter_dialog_android_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:orientation="vertical"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.0"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/course_filter_dismiss"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="15dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_clear_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/course_filter_title"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/reset_filter"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.0"
                android:fontFamily="sans-serif-medium"
                android:text="@string/course_filter_reset_filter"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <Spinner
            android:id="@+id/search_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/spinner_bg"
            android:popupBackground="@color/cards_and_dialogs_color"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/cards_and_dialogs_color"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/start_date_picker_clickable_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="?selectableItemBackgroundBorderless"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:text="@string/course_filter_start_date_label"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/start_date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/course_filter_select_date_action"
                    android:textColor="?colorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="0.0"
                android:background="@color/divider_color"
                android:contentDescription="@null" />

            <LinearLayout
                android:id="@+id/end_date_picker_clickable_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="?selectableItemBackgroundBorderless"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:text="@string/course_filter_end_date_label"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/end_date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/course_filter_select_date_action"
                    android:textColor="?colorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/apply_filter"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/course_filter_apply_filters_button"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>